# scopus-cli

./: .gitignore  README.md  pyproject.toml
scopus_cli/: __init__.py  cli.py  client.py
scopus_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_client.py
