[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scopus-cli"
version = "0.1.0"
description = "A command-line interface for the Elsevier Scopus API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
scopus = "scopus_cli.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "responses>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scopus_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
