[project]
name = "scopus-cli"
version = "0.1.0"
description = "A tiny, dependency-free command line for the Elsevier/Scopus API."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "venetanji" }]
keywords = ["scopus", "elsevier", "bibliography", "citations", "research"]
dependencies = []

[project.scripts]
scopus = "scopus_cli.cli:main"

[project.urls]
Homepage = "https://github.com/venetanji/scopus-cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scopus_cli"]
